--- a/src/global.css
+++ b/src/global.css
@@ -37,14 +37,13 @@ p {
 }
 
 :root {
-  --small: 0.813rem;
-  --normal: 0.875rem;
+  --small: 0.875rem;
   --medium: 1rem;
   --large: 1.375rem;
-  --xlarge: 1.75rem;
 }
 
 :root {
   --white: #ffffff;
   --black: #000000;
+  --golden: #fecc4f;
 }
