--- a/src/App.module.css
+++ b/src/App.module.css
@@ -8,39 +8,31 @@
 }
 
 .content {
-  display: grid;
+  /* display: grid;
   grid-template-rows: 20% auto 20% 30px;
   grid-template-areas:
     "about"
     "project"
     "education"
-    "footer";
+    "footer"; */
+  display: flex;
+  flex-direction: column;
   padding: 10px;
   font-family: var(--main-font-family);
+  font-size: var(--medium);
   line-height: 1.4;
   letter-spacing: 1.2;
-  color: black;
+  color: var(--black);
   width: 100%;
   height: 100%;
 }
-.about {
+/* .about {
   grid-area: about;
   background-color: aliceblue;
   display: flex;
-}
+} */
 
-.thumbnail {
-  width: 20rem;
-}
-
-.image {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-  aspect-ratio: 1/1;
-}
-
-.project {
+/* .project {
   grid-area: project;
   background-color: antiquewhite;
 }
@@ -51,4 +43,4 @@
   display: flex;
   justify-content: space-between;
   padding: 4px 0;
-}
+} */
