--- a/src/Header/Header.module.css
+++ b/src/Header/Header.module.css
@@ -11,6 +11,11 @@
   border-radius: 0.5rem;
 }
 
+.name {
+  font-family: var(--bold-font-family);
+  font-size: var(--large);
+  margin-bottom: 1rem;
+}
 .contact-details {
   display: flex;
   gap: 0.5rem;
@@ -18,6 +23,7 @@
 }
 .contact-item {
   display: flex;
+  align-items: center;
   gap: 0.25rem;
 }
 
