--- a/src/global.css
+++ b/src/global.css
@@ -46,5 +46,7 @@ p {
   --white: #ffffff;
   --black: #000000;
   --golden: #fecc4f;
+  --dark-blue: #1a84b6;
   --blue: #21a5e3;
+  --light-blue: #e9f6fc;
 }
