--- a/src/Header/Header.module.css
+++ b/src/Header/Header.module.css
@@ -1,26 +1,36 @@
 .header {
   display: flex;
   gap: 10px;
-  margin: 0;
-  padding: 0;
-  background-color: aliceblue;
 }
 
 .image {
-  width: 12rem;
+  width: 10rem;
   border-radius: 0.5rem;
+}
+
+.outer-wrapper {
+  display: flex;
+  justify-content: space-between;
+  flex: 1;
+}
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .name {
   font-family: var(--bold-font-family);
   font-size: var(--large);
-  margin-bottom: 1rem;
 }
+
 .contact-details {
   display: flex;
-  gap: 0.5rem;
+  gap: 0.75rem;
   flex-direction: column;
 }
+
 .contact-item {
   display: flex;
   align-items: center;
@@ -30,4 +40,23 @@
 .link {
   font-family: var(--bold-italic-font-family);
   color: var(--blue);
+}
+
+.skills-list {
+  display: flex;
+  flex-wrap: wrap;
+  width: 19rem;
+}
+
+.list-item {
+  border-radius: 2rem;
+  background-color: var(--blue);
+  font-family: var(--bold-font-family);
+  font-size: var(--small);
+  display: flex;
+  align-items: center;
+  margin: 0.25rem;
+  padding: 0.15rem 0.75rem;
+  color: var(--blue);
+  background-color: var(--light-blue);
 }
