--- a/src/Header/Header.module.css
+++ b/src/Header/Header.module.css
@@ -4,7 +4,7 @@
 }
 
 .image {
-  width: 10rem;
+  width: 9rem;
   border-radius: 0.5rem;
 }
 
@@ -35,6 +35,7 @@
   display: flex;
   align-items: center;
   gap: 0.25rem;
+  font-size: var(--small);
 }
 
 .link {
@@ -45,7 +46,7 @@
 .skills-list {
   display: flex;
   flex-wrap: wrap;
-  width: 19rem;
+  width: 23rem;
 }
 
 .list-item {
@@ -56,7 +57,9 @@
   display: flex;
   align-items: center;
   margin: 0.25rem;
-  padding: 0.15rem 0.75rem;
+  padding: 0.1rem 0.5rem;
   color: var(--blue);
   background-color: var(--light-blue);
+  font-size: var(--small);
+  font-size: 12px;
 }
