--- a/src/components/EducationAndProgrammingCertificates/EducationAndProgrammingCertificates.module.css
+++ b/src/components/EducationAndProgrammingCertificates/EducationAndProgrammingCertificates.module.css
@@ -1,20 +1,19 @@
 .education-and-programming-certificates {
-  grid-area: education;
-  background-color: aqua;
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
 }
 
 .education {
   display: flex;
   justify-content: space-between;
-  height: 40%;
+  flex-direction: column;
+  flex: 1;
+  gap: 1.5rem;
 }
 
 .wrapper {
   display: flex;
   flex-direction: column;
-  gap: 0.25rem;
 }
 
 .university-title {
@@ -30,10 +29,21 @@
 }
 
 .certificates {
-  height: 60%;
+  /* height: 60%;
   display: flex;
+  gap: 0.25rem; */
+  display: grid;
+  grid-template-columns: repeat(6, 76px);
   gap: 0.25rem;
+  margin-top: auto;
+  margin-bottom: auto;
 }
-
-.certificate-image {
+.certificate-thumbnail {
+  width: 120px;
 }
+/* .certificate-image {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  aspect-ratio: 1/1;
+} */
