--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -7,7 +7,7 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
-  width: 70%;
+  width: 74%;
 }
 
 .video {
@@ -31,6 +31,13 @@
   display: flex;
   flex-direction: column;
   gap: 0.25rem;
+  list-style: circle;
+  margin: 0;
+  padding: 0 16px;
+}
+
+.list-item {
+  list-style: circle;
 }
 
 .testing-wrapper {
@@ -38,11 +45,19 @@
   gap: 0.5rem;
 }
 
+.link {
+  text-decoration: none;
+  color: var(--blue);
+  font-family: var(--bold-italic-font-family);
+  margin-left: 0.25rem;
+}
+
 .right {
   display: flex;
   flex-wrap: wrap;
   gap: 0.25rem;
-  width: 30%;
+  width: 26%;
+  margin-bottom: auto;
 }
 
 .half {
