--- a/src/global.css
+++ b/src/global.css
@@ -50,4 +50,7 @@ p {
   --blue: #21a5e3;
   --light-blue: #e9f6fc;
   --violet: #cb9bf7;
+  --gray: #4c4a49;
+  --medium-gray: #878685;
+  --light-gray: #cbc9c9;
 }
