--- a/src/components/EducationAndProgrammingCertificates/EducationAndProgrammingCertificates.module.css
+++ b/src/components/EducationAndProgrammingCertificates/EducationAndProgrammingCertificates.module.css
@@ -8,24 +8,33 @@
   justify-content: space-between;
   flex-direction: column;
   flex: 1;
-  gap: 1.5rem;
+  /* gap: 0.75rem; */
+
 }
 
 .wrapper {
   display: flex;
   flex-direction: column;
+  /* gap: 0.25rem; */
 }
 
 .university-title {
   font-size: var(--small);
+  color: var(--medium-gray);
+  font-family: var(--bold-italic-font-family);
 }
 
 .education-year {
   font-size: var(--small);
+  color: var(--gray);
 }
 
 .education-title {
-  font-size: var(--medium);
+  font-size: var(--small);
+  font-family: var(--bold-font-family);
+  display: flex;
+  gap: 0.25rem;
+  margin-top: 0.25rem;
 }
 
 .certificates {
@@ -33,7 +42,7 @@
   display: flex;
   gap: 0.25rem; */
   display: grid;
-  grid-template-columns: repeat(6, 76px);
+  grid-template-columns: repeat(6, 78px);
   gap: 0.25rem;
   margin-top: auto;
   margin-bottom: auto;
@@ -41,9 +50,9 @@
 .certificate-thumbnail {
   width: 120px;
 }
-/* .certificate-image {
-  width: 100%;
+.certificate-image {
+  /* width: 100%;
   height: 100%;
-  object-fit: contain;
-  aspect-ratio: 1/1;
-} */
+  object-fit: contain; */
+  aspect-ratio: 1/2;
+}
