--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -31,13 +31,13 @@
   display: flex;
   flex-direction: column;
   gap: 0.25rem;
-  list-style: circle;
+  /* list-style: circle; */
   margin: 0;
-  padding: 0 18px;
+  /* padding: 0 18px; */
 }
 
-.list-item {
-  list-style: circle;
+.description-icon {
+  color: var(--golden);
 }
 
 .testing-wrapper {
@@ -50,6 +50,11 @@
   color: var(--blue);
   font-family: var(--bold-italic-font-family);
   margin-left: 0.25rem;
+}
+
+.link-icon {
+  font-size: 10px;
+  color: var(--violet);
 }
 
 .right {
