--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -31,9 +31,13 @@
   display: flex;
   flex-direction: column;
   gap: 0.25rem;
-  /* list-style: circle; */
   margin: 0;
-  /* padding: 0 18px; */
+}
+
+.list-item {
+  display: flex;
+  align-items: center;
+  gap: 0.25rem;
 }
 
 .description-icon {
