--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -65,10 +65,15 @@
 
 .right {
   display: flex;
-  flex-wrap: wrap;
-  gap: 0.5rem;
+  flex-direction: column;
+  gap: 0.25rem;
   width: 26%;
-  margin-bottom: auto;
+}
+
+.right-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.6rem;
 }
 
 .half {
