--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -37,7 +37,7 @@
 .certificates {
   display: grid;
   grid-template-columns: repeat(6, 76px);
-  gap: 0.15rem;
+  gap: 4px;
   margin-top: auto;
   margin-bottom: auto;
 }
