--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -73,7 +73,7 @@
 .right-wrapper {
   display: flex;
   flex-wrap: wrap;
-  gap: 0.6rem;
+  gap: 0.9rem;
 }
 
 .half {
@@ -83,4 +83,5 @@
 
 .mobile-images-style {
   border-radius: 0.75rem;
+  border: .1px solid var(--black);
 }
